--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "DATABASE_URL=postgres://localhost/wizard_users_db nodemon ./node_modules/mocha/bin/mocha"
+    "test": "DATABASE_URL=postgres://localhost/wizard_users_db nodemon ./node_modules/mocha/bin/mocha",
+    "start:dev": "DATABASE_URL=postgres://localhost/wizard_users_db_dev nodemon server.js"
   },
   "keywords": [],
   "author": "",
